--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -159,7 +159,7 @@
                       <h6 class="text-center mb-0">Solde</h6>
                       <!-- <span class="text-xs">Belong Interactive</span> -->
                       <hr class="horizontal dark my-3">
-                      <h5 class="mb-0">+ 3 750 000€</h5>
+                      <h5 class="mb-0">+275 000€</h5>
                     </div>
                   </div>
                 </div>
@@ -171,7 +171,7 @@
                       </div>
                     </div>
                     <div class="card-body pt-0 p-3 text-center">
-                      <h6 class="text-center mb-0">Paypal</h6>
+                      <h6 class="text-center mb-0">PCS</h6>
                       <!-- <span class="text-xs">Freelance Payment</span> -->
                       <hr class="horizontal dark my-3">
                       <h5 class="mb-0">+ 1 000€</h5>
