--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -84,7 +84,7 @@
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Tableau de bord</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">Intesa Sanpaolo Bank Luxembourg</h6>
+          <h6 class="font-weight-bolder mb-0">Intesa Crédit Agricole</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -131,7 +131,7 @@
                       <div class="d-flex">
                         <div class="me-4">
                           <p class="text-white text-sm opacity-8 mb-0">Card Holder</p>
-                          <h6 class="text-white mb-0">Blandine DUPONT</h6>
+                          <h6 class="text-white mb-0">John Bourgeois</h6>
                         </div>
                         <div>
                           <p class="text-white text-sm opacity-8 mb-0">Expires</p>
@@ -159,7 +159,7 @@
                       <h6 class="text-center mb-0">Solde</h6>
                       <!-- <span class="text-xs">Belong Interactive</span> -->
                       <hr class="horizontal dark my-3">
-                      <h5 class="mb-0">+275 000€</h5>
+                      <h5 class="mb-0">3 000€</h5>
                     </div>
                   </div>
                 </div>
