--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     Intesa Sanpaolo Bank Luxembourg
   </title>
   <!--     Fonts and icons  -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
   <link href="assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href="assets/css/nucleo-svg.css" rel="stylesheet" />
@@ -46,14 +47,17 @@
       <div class="page-header min-vh-100">
         <div class="container">
           <div class="row">
-            <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
-              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('logo.jpg'); background-size: cover;">
+            <div
+              class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
+              <div
+                class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center"
+                style="background-image: url('logo.jpg'); background-size: cover;">
               </div>
             </div>
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
               <div class="card card-plain">
                 <div class="card-header">
-                  <h4 class="font-weight-bolder">Connexion</h4>
+                  <h4 class="font-weight-bolder">Connexio</h4>
                   <p class="mb-0">Entrez votre nom d'utilisateur et mot de passe</p>
                 </div>
                 <div class="card-body">
@@ -73,7 +77,8 @@
                       </label>
                     </div>
                     <div class="text-center">
-                      <button onclick="connexion()" type="button" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Se Connecter</button>
+                      <button onclick="connexion()" type="button"
+                        class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Se Connecter</button>
                     </div>
                   </form>
                 </div>
