--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="logo.jpg">
+  <link rel="icon" type="image/png" href="logo.jpeg">
   <title>
     Intesa Sanpaolo Bank Luxembourg
   </title>
@@ -51,7 +51,7 @@
               class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
               <div
                 class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center"
-                style="background-image: url('logo.jpg'); background-size: cover;">
+                style="background-image: url('logo.jpeg'); background-size: cover;">
               </div>
             </div>
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
@@ -77,8 +77,8 @@
                       </label>
                     </div>
                     <div class="text-center">
-                      <button onclick="connexion()" type="button"
-                        class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Se Connecter</button>
+                      <button onclick="connexion()" type="button" style="color:#fff; background-color: #009b9d;"
+                        class="btn btn-lg btn-lg w-100 mt-4 mb-0">Se Connecter</button>
                     </div>
                   </form>
                 </div>
