--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -19,7 +19,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="logo.jpg">
+  <link rel="icon" type="image/png" href="logo.jpeg">
   <title>
     Tableau de bord
   </title>
@@ -84,7 +84,7 @@
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Tableau de bord</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">Intesa Crédit Agricole</h6>
+          <h6 class="font-weight-bolder mb-0">Crédit Agricole</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
