--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -170,21 +170,21 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 col-6">
+                <!-- <div class="col-md-6 col-6">
                   <div class="card">
                     <div class="card-header mx-4 p-3 text-center">
                       <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
                         <i class="material-icons opacity-10">account_balance_wallet</i>
                       </div>
                     </div>
-                    <!-- <div class="card-body pt-0 p-3 text-center">
-                      <h6 class="text-center mb-0">PCS</h6> -->
-                    <!-- <span class="text-xs">Freelance Payment</span> -->
-                    <!-- <hr class="horizontal dark my-3">
+                    <div class="card-body pt-0 p-3 text-center">
+                      <h6 class="text-center mb-0">PCS</h6>
+                    <span class="text-xs">Freelance Payment</span>
+                    <hr class="horizontal dark my-3">
                       <h5 class="mb-0">+ 1 000€</h5>
-                    </div> -->
+                    </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-md-12 mb-lg-0 mb-4">
