--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -373,7 +373,7 @@
             <div class="card-body pt-4 p-3">
               <h6 class="text-uppercase text-body text-xs font-weight-bolder mb-3">Nouveaux</h6>
               <ul class="list-group">
-                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                <!-- <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
                   <div class="d-flex align-items-center">
                     <button
                       class="btn btn-icon-only btn-rounded btn-outline-danger mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
@@ -386,7 +386,7 @@
                   <div class="d-flex align-items-center text-danger text-gradient text-sm font-weight-bold">
                     <span>- 275.000€</span> <span class="badge badge-danger">bloquée</span>
                   </div>
-                </li>
+                </li> -->
                 <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
                   <div class="d-flex align-items-center">
                     <button
@@ -475,7 +475,7 @@
                   document.write(new Date().getFullYear())
                 </script>,
                 by
-                <a href="#" class="font-weight-bold">Intesa Sanpaolo Bank Luxembourg</a>
+                <a href="#" class="font-weight-bold">Crédit Agricole</a>
               </div>
             </div>
             <div class="col-lg-6">
