--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="logo.jpeg">
+  <link rel="icon" type="image/png" href="logo.jpg">
   <title>
     Intesa Sanpaolo Bank Luxembourg
   </title>
@@ -51,13 +51,13 @@
               class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
               <div
                 class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center"
-                style="background-image: url('logo.jpeg'); background-size: cover;">
+                style="background-image: url('logo.jpg'); background-size: contain;background-repeat: no-repeat;">
               </div>
             </div>
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
               <div class="card card-plain">
                 <div class="card-header">
-                  <h4 class="font-weight-bolder">Connexio</h4>
+                  <h4 class="font-weight-bolder">Connexion</h4>
                   <p class="mb-0">Entrez votre nom d'utilisateur et mot de passe</p>
                 </div>
                 <div class="card-body">
@@ -77,7 +77,7 @@
                       </label>
                     </div>
                     <div class="text-center">
-                      <button onclick="connexion()" type="button" style="color:#fff; background-color: #009b9d;"
+                      <button onclick="connexion()" type="button" style="color:#fff; background-color: #2b4f84;"
                         class="btn btn-lg btn-lg w-100 mt-4 mb-0">Se Connecter</button>
                     </div>
                   </form>
