--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -38,22 +38,22 @@
   <link id="pagestyle" href="assets/css/material-dashboard.css?v=3.0.4" rel="stylesheet" />
 </head>
 
-<body class="g-sidenav-show  bg-gray-200">
+<body class="g-sidenav-show ">
   <aside
     class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark"
     id="sidenav-main">
-    <div class="sidenav-header">
+    <div class="sidenav-header" style="background-color: #fff;">
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
-      <!-- <a class="navbar-brand m-0" href="" target="_blank">
-        <img src="logo.jpg" col class="navbar-brand-img h-200" width="100" height="300" alt="main_logo">
-      </a> -->
+      <a class="navbar-brand m-0" href="" target="_blank">
+        <img src="logo.png" col class="navbar-brand-img h-200" width="100" height="300" alt="main_logo">
+      </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white active bg-gradient-primary" href="tableau-de-bord.html">
+        <li class="nav-item" style="background-color: #2b4f84;">
+          <a class="nav-link text-white" style="background-color: #2b4f84;" href="tableau-de-bord.html">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">receipt_long</i>
             </div>
@@ -75,7 +75,7 @@
     </div>
     <div onclick="deconnexion()" class="sidenav-footer position-absolute w-100 bottom-0 ">
       <div class="mx-3">
-        <span class="btn bg-gradient-primary mt-4 w-100" type="button">Se déconnecter</span>
+        <span class="btn mt-4 w-100" type="button" style="background-color: #2b4f84;">Se déconnecter</span>
       </div>
     </div>
   </aside>
@@ -89,7 +89,7 @@
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Tableau de bord</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">Crédit Agricole</h6>
+          <h6 class="font-weight-bolder mb-0">Banque Populaire</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -129,7 +129,7 @@
                 <div class="overflow-hidden position-relative border-radius-xl">
                   <img src="assets/img/illustrations/pattern-tree.svg"
                     class="position-absolute opacity-2 start-0 top-0 w-100 z-index-1 h-100" alt="pattern-tree">
-                  <span class="mask bg-gradient-primary opacity-10"></span>
+                  <span class="mask opacity-10" style="background-color: #2b4f84;"></span>
                   <div class="card-body position-relative z-index-1 p-3">
                     <i class="material-icons text-white p-2">wifi</i>
                     <h5 class="text-white mt-4 mb-5 pb-2">
@@ -138,11 +138,11 @@
                       <div class="d-flex">
                         <div class="me-4">
                           <p class="text-white text-sm opacity-8 mb-0">Card Holder</p>
-                          <h6 class="text-white mb-0">John Bourgeois</h6>
+                          <h6 class="text-white mb-0">Christelle Cornet</h6>
                         </div>
                         <div>
                           <p class="text-white text-sm opacity-8 mb-0">Expires</p>
-                          <h6 class="text-white mb-0">11/25</h6>
+                          <h6 class="text-white mb-0">11/27</h6>
                         </div>
                       </div>
                       <div class="ms-auto w-20 d-flex align-items-end justify-content-end">
@@ -158,7 +158,8 @@
                 <div class="col-md-6 col-6">
                   <div class="card">
                     <div class="card-header mx-4 p-3 text-center">
-                      <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
+                      <div style="background-color: #2b4f84;"
+                        class="icon icon-shape icon-lg shadow text-center border-radius-lg">
                         <i class="material-icons opacity-10">account_balance</i>
                       </div>
                     </div>
@@ -166,7 +167,7 @@
                       <h6 class="text-center mb-0">Solde</h6>
                       <!-- <span class="text-xs">Belong Interactive</span> -->
                       <hr class="horizontal dark my-3">
-                      <h5 class="mb-0">203 000€</h5>
+                      <h5 class="mb-0">3000€</h5>
                     </div>
                   </div>
                 </div>
@@ -192,7 +193,7 @@
                 <div class="card-header pb-0 p-3">
                   <div class="row">
                     <div class="col-6 d-flex align-items-center">
-                      <h6 class="mb-0">Payment Method</h6>
+                      <h6 class="mb-0">Moyen de paiement</h6>
                     </div>
                     <div class="col-6 text-end">
                       <!-- <a class="btn bg-gradient-dark mb-0" href="javascript:;"><i class="material-icons text-sm">add</i>&nbsp;&nbsp;Add New Card</a> -->
@@ -373,20 +374,20 @@
             <div class="card-body pt-4 p-3">
               <h6 class="text-uppercase text-body text-xs font-weight-bolder mb-3">Nouveaux</h6>
               <ul class="list-group">
-                <!-- <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
                   <div class="d-flex align-items-center">
                     <button
                       class="btn btn-icon-only btn-rounded btn-outline-danger mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
                         class="material-icons text-lg">priority_high</i></button>
                     <div class="d-flex flex-column">
-                      <h6 class="mb-1 text-dark text-sm">Blandine DUPONT</h6>
-                      <span class="text-xs">26 Mai 2022, à 12:30 </span>
+                      <h6 class="mb-1 text-dark text-sm">Mohamed Karim Mourir</h6>
+                      <span class="text-xs">25 Spetembre 2024, </span>
                     </div>
                   </div>
-                  <div class="d-flex align-items-center text-danger text-gradient text-sm font-weight-bold">
-                    <span>- 275.000€</span> <span class="badge badge-danger">bloquée</span>
+                  <div class="d-flex align-items-center text-warning text-gradient text-sm font-weight-bold">
+                    <span>- 9 713 877,13 €</span> <span class="badge badge-danger">En cours</span>
                   </div>
-                </li> -->
+                </li>
                 <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
                   <div class="d-flex align-items-center">
                     <button
@@ -452,12 +453,12 @@
                       class="btn btn-icon-only btn-rounded btn-outline-dark mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
                         class="material-icons text-lg">priority_high</i></button>
                     <div class="d-flex flex-column">
-                      <h6 class="mb-1 text-dark text-sm">Webflow</h6>
+                      <h6 class="mb-1 text-dark text-sm">Transfert à Mohamed Karim Mourir </h6>
                       <span class="text-xs">15 Fevrier 2020, à 05:00 </span>
                     </div>
                   </div>
-                  <div class="d-flex align-items-center text-danger text-sm font-weight-bold">
-                    erreur
+                  <div class="d-flex align-items-center text-warning text-sm font-weight-bold">
+                    9 713 877,13 €
                   </div>
                 </li>
               </ul>
@@ -475,7 +476,7 @@
                   document.write(new Date().getFullYear())
                 </script>,
                 by
-                <a href="#" class="font-weight-bold">Crédit Agricole</a>
+                <a href="#" class="font-weight-bold">Banque Populaire</a>
               </div>
             </div>
             <div class="col-lg-6">
