--- a/transaction.html
+++ b/transaction.html
@@ -24,7 +24,8 @@
     Tableau de bord
   </title>
   <!--     Fonts and icons     -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
   <link href="assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href="assets/css/nucleo-svg.css" rel="stylesheet" />
@@ -42,18 +43,21 @@
 </head>
 
 <body class="g-sidenav-show  bg-gray-200">
-  <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
-    <div class="sidenav-header">
-      <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-      <!-- <a class="navbar-brand m-0" href="" target="_blank">
-        <img src="logo.png" col class="navbar-brand-img h-200" alt="main_logo">
-      </a> -->
+  <aside
+    class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark"
+    id="sidenav-main">
+    <div class="sidenav-header" style="background-color: #fff;">
+      <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
+        aria-hidden="true" id="iconSidenav"></i>
+      <a class="navbar-brand m-0" href="" target="_blank">
+        <img src="logo.png" col class="navbar-brand-img h-200" width="100" height="300" alt="main_logo">
+      </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white bg-gradient-primary" href="tableau-de-bord.html">
+        <li class="nav-item" style="background-color: #2b4f84;">
+          <a class="nav-link text-white" style="background-color: #2b4f84;" href="tableau-de-bord.html">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">receipt_long</i>
             </div>
@@ -64,7 +68,7 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8"></h6>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white active " href="transaction.html">
+          <a class="nav-link text-white active" href="transaction.html">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">account_balance_wallet</i>
             </div>
@@ -75,13 +79,14 @@
     </div>
     <div onclick="deconnexion()" class="sidenav-footer position-absolute w-100 bottom-0 ">
       <div class="mx-3">
-        <span class="btn bg-gradient-primary mt-4 w-100" type="button">Se déconnecter</span>
+        <span class="btn mt-4 w-100" type="button" style="background-color: #2b4f84;">Se déconnecter</span>
       </div>
     </div>
   </aside>
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" data-scroll="true">
+    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
+      data-scroll="true">
       <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
@@ -122,60 +127,62 @@
     <div class="container-fluid py-4">
       <div class="row">
         <div class="page-header">
-            <div class="position-absolute fixed-top ms-auto w-90 h-100 rounded-3 z-index-0 d-none d-sm-none d-md-block me-n4" style="background-image: url(credit-card.png); background-size: cover;">
-            </div>
-            <div class="container py-5">
-              <div class="row">
-                <div class="col-lg-7 d-flex justify-content-center flex-column">
-                  <div class="card card-body d-flex justify-content-center shadow-lg p-5 blur align-items-center">
-                    <h3 class="text-center">Effectuer une transaction</h3>
-                    <div role="form">
-                      <div class="card-body">
-                        <div class="row">
-                            <div class="cc-types">
-                                <img class="cc-types__img cc-types__img--amex">
-                                <img class="cc-types__img cc-types__img--visa">
-                                <img class="cc-types__img cc-types__img--mastercard">
-                                <img class="cc-types__img cc-types__img--disc">
-                                <img class="cc-types__img cc-types__img--genric">
-                            </div>
+          <div
+            class="position-absolute fixed-top ms-auto w-90 h-100 rounded-3 z-index-0 d-none d-sm-none d-md-block me-n4"
+            style="background-image: url(credit-card.png); background-size: cover;">
+          </div>
+          <div class="container py-5">
+            <div class="row">
+              <div class="col-lg-7 d-flex justify-content-center flex-column">
+                <div class="card card-body d-flex justify-content-center shadow-lg p-5 blur align-items-center">
+                  <h3 class="text-center">Effectuer une transaction</h3>
+                  <div role="form">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="cc-types">
+                          <img class="cc-types__img cc-types__img--amex">
+                          <img class="cc-types__img cc-types__img--visa">
+                          <img class="cc-types__img cc-types__img--mastercard">
+                          <img class="cc-types__img cc-types__img--disc">
+                          <img class="cc-types__img cc-types__img--genric">
                         </div>
-                        <div class="row">
-                          <div class="col-md-6">
-                            <div class="input-group input-group-static mb-4">
-                              <label>Prenoms</label>
-                              <input id="prenoms" class="form-control" placeholder="Prenoms du destinataire"  type="text">
-                            </div>
-                          </div>
-                          <div class="col-md-6 ps-2">
-                            <div class="input-group input-group-static">
-                              <label>Nom</label>
-                              <input id="nom" type="text" class="form-control" placeholder="Nom du destinataire">
-                            </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="input-group input-group-static mb-4">
+                            <label>Prenoms</label>
+                            <input id="prenoms" class="form-control" placeholder="Prenoms du destinataire" type="text">
                           </div>
                         </div>
-                        <div class="mb-4">
-                            <div class="input-group input-group-static">
-                              <label>Numero RIB</label>
-                              <input type="text" class="form-control" placeholder="XXXX XXXX XXXX XXXX">
-                            </div>
-                        </div>
-                        <div class="mb-4">
-                            <div class="input-group input-group-static">
-                              <label>Montant (€)</label>
-                              <input type="text" class="form-control cc-number-input" placeholder="Montant en (€)">
-                            </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-12">
-                            <div class="form-check form-switch d-flex align-items-center mb-4">
-                              <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked="">
-                              <label class="form-check-label ms-3 mb-0" for="flexSwitchCheckDefault">J'accepte <a href="javascript:;" class="text-dark"><u>Termes & Conditions</u></a>.</label>
-                            </div>
+                        <div class="col-md-6 ps-2">
+                          <div class="input-group input-group-static">
+                            <label>Nom</label>
+                            <input id="nom" type="text" class="form-control" placeholder="Nom du destinataire">
                           </div>
-                          <div class="col-md-12">
-                            <button onclick="transaction()" class="btn bg-gradient-dark w-100">Valider</button>
+                        </div>
+                      </div>
+                      <div class="mb-4">
+                        <div class="input-group input-group-static">
+                          <label>Numero RIB</label>
+                          <input type="text" class="form-control" placeholder="XXXX XXXX XXXX XXXX">
+                        </div>
+                      </div>
+                      <div class="mb-4">
+                        <div class="input-group input-group-static">
+                          <label>Montant (€)</label>
+                          <input type="text" class="form-control cc-number-input" placeholder="Montant en (€)">
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div class="form-check form-switch d-flex align-items-center mb-4">
+                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked="">
+                            <label class="form-check-label ms-3 mb-0" for="flexSwitchCheckDefault">J'accepte <a
+                                href="javascript:;" class="text-dark"><u>Termes & Conditions</u></a>.</label>
                           </div>
+                        </div>
+                        <div class="col-md-12">
+                          <button onclick="transaction()" class="btn bg-gradient-dark w-100">Valider</button>
                         </div>
                       </div>
                     </div>
@@ -184,16 +191,18 @@
               </div>
             </div>
           </div>
+        </div>
       </div>
       <footer class="footer py-4  ">
         <div class="container-fluid">
           <div class="row align-items-center justify-content-lg-between">
             <div class="col-lg-6 mb-lg-0 mb-4">
               <div class="copyright text-center text-sm text-muted text-lg-start">
-                © <script>
+                ©
+                <script>
                   document.write(new Date().getFullYear())
                 </script>,
-                 by
+                by
                 <a href="#" class="font-weight-bold">Intesa Sanpaolo Bank Luxembourg</a>
               </div>
             </div>
@@ -203,17 +212,17 @@
         </div>
       </footer>
     </div>
-    
+
   </main>
   <!--   Core JS Files   -->
   <script>
-      function deconnexion(){
-    console.log("deconnecté");
-    localStorage.setItem("connexion","1") // 1 => non | 2 => oui
-    location.replace("../index.html")
-  }
+    function deconnexion() {
+      console.log("deconnecté");
+      localStorage.setItem("connexion", "1") // 1 => non | 2 => oui
+      location.replace("../index.html")
+    }
   </script>
-<script src="js/cardcredi.js"></script>
+  <script src="js/cardcredi.js"></script>
   <script src="assets/js/core/popper.min.js"></script>
   <script src="assets/js/core/bootstrap.min.js"></script>
   <script src="assets/js/plugins/perfect-scrollbar.min.js"></script>
