--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="logo.jpg">
+  <link rel="icon" type="image/png" href="logo.svg">
   <title>
-    Intesa Sanpaolo Bank Luxembourg
+    SOCIETE GENERALE
   </title>
   <!--     Fonts and icons  -->
   <link rel="stylesheet" type="text/css"
@@ -51,7 +51,7 @@
               class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
               <div
                 class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center"
-                style="background-image: url('logo.jpg'); background-size: contain;background-repeat: no-repeat;">
+                style="background-image: url('logo.svg'); background-size: contain;background-repeat: no-repeat;">
               </div>
             </div>
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
