--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -19,7 +19,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="logo.jpeg">
+  <link rel="icon" type="image/png" href="logo.svg">
   <title>
     Tableau de bord
   </title>
@@ -52,7 +52,7 @@
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="" target="_blank">
-        <img src="logo.png" col class="navbar-brand-img h-200" width="100" height="300" alt="main_logo">
+        <img src="logo.svg" col class="navbar-brand-img h-200" width="100" height="300" alt="main_logo">
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
@@ -77,15 +77,14 @@
             <span class="nav-link-text ms-1">Transactions</span>
           </a>
         </li>
-        <li class="nav-item">
-          <!-- Lien pour afficher/masquer le RIB -->
+        <!-- <li class="nav-item">
           <a class="nav-link text-white" href="#" onclick="toggleVisibility()">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">account_balance_wallet</i>
             </div>
             <span class="nav-link-text ms-1">Mon RIB</span>
           </a>
-        </li>
+        </li> -->
 
       </ul>
     </div>
@@ -105,7 +104,7 @@
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Tableau de bord</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">Banque Populaire</h6>
+          <h6 class="font-weight-bolder mb-0">SOCIETE GENERALE</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -150,7 +149,7 @@
                     <i class="material-icons text-white p-2">wifi</i>
                     <h5 class="text-white mt-4 mb-5 pb-2">
                       4562&nbsp;&nbsp;&nbsp;1122&nbsp;&nbsp;&nbsp;4594&nbsp;&nbsp;&nbsp;7852</h5> <br>
-                    <h6 id="texte" class="text-white">RIB:FR7630001007941234567890185, 30001</h6>
+                    <!-- <h6 id="texte" class="text-white">RIB:FR7630001007941234567890185, 30001</h6> -->
                     <div class="d-flex">
                       <div class="d-flex">
                         <div class="me-4">
@@ -184,7 +183,7 @@
                       <h6 class="text-center mb-0">Solde</h6>
                       <!-- <span class="text-xs">Belong Interactive</span> -->
                       <hr class="horizontal dark my-3">
-                      <h5 class="mb-0">300€</h5>
+                      <h5 class="mb-0">2.777.000 €</h5>
                     </div>
                   </div>
                 </div>
@@ -402,7 +401,7 @@
                     </div>
                   </div>
                   <div class="d-flex align-items-center text-warning text-gradient text-sm font-weight-bold">
-                    <span>- 9 713 877,13 €</span> <span class="badge badge-danger">En cours</span>
+                    <span>-2.777.000 €</span> <span class="badge badge-danger">En cours</span>
                   </div>
                 </li>
                 <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
