--- a/transaction.html
+++ b/transaction.html
@@ -19,7 +19,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="logo.jpg">
+  <link rel="icon" type="image/png" href="logo.svg">
   <title>
     Tableau de bord
   </title>
@@ -50,7 +50,7 @@
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="" target="_blank">
-        <img src="logo.png" col class="navbar-brand-img h-200" width="100" height="300" alt="main_logo">
+        <img src="logo.svg" col class="navbar-brand-img h-200" width="100" height="300" alt="main_logo">
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
