--- a/tableau-de-bord.html
+++ b/tableau-de-bord.html
@@ -144,7 +144,7 @@
                 <div class="overflow-hidden position-relative border-radius-xl">
                   <img src="assets/img/illustrations/pattern-tree.svg"
                     class="position-absolute opacity-2 start-0 top-0 w-100 z-index-1 h-100" alt="pattern-tree">
-                  <span class="mask opacity-10" style="background-color: #2b4f84;"></span>
+                  <span class="mask opacity-10" style="background-color: red;"></span>
                   <div class="card-body position-relative z-index-1 p-3">
                     <i class="material-icons text-white p-2">wifi</i>
                     <h5 class="text-white mt-4 mb-5 pb-2">
@@ -154,7 +154,7 @@
                       <div class="d-flex">
                         <div class="me-4">
                           <p class="text-white text-sm opacity-8 mb-0">Card Holder</p>
-                          <h6 class="text-white mb-0">Christelle Cornet</h6>
+                          <h6 class="text-white mb-0">Carla Canon</h6>
                         </div>
                         <div>
                           <p class="text-white text-sm opacity-8 mb-0">Expires</p>
@@ -183,7 +183,7 @@
                       <h6 class="text-center mb-0">Solde</h6>
                       <!-- <span class="text-xs">Belong Interactive</span> -->
                       <hr class="horizontal dark my-3">
-                      <h5 class="mb-0">2.777.000 €</h5>
+                      <h5 class="mb-0" style="color: red;">2.777.000 €</h5>
                     </div>
                   </div>
                 </div>
